kubernetes/byparr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: byparr

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: byparr
      app.kubernetes.io/instance: byparr
  template:
    metadata:
      name: byparr
      labels:
        app.kubernetes.io/name: byparr
        app.kubernetes.io/instance: byparr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: byparr
        image: ghcr.io/thephaseless/byparr:3.0.4@sha256:874f719518f617d03a60e03411fc5d090647e1a877041e81f8dc965927c7deb6
        ports:
        - name: http
          containerPort: 8191
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: home
          mountPath: /home/ubuntu
      volumes:
      - name: tmp
        emptyDir:
          sizeLimit: 2Gi
      - name: home
        emptyDir:
          sizeLimit: 2Gi
