kubernetes/byparr/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: byparr

spec:
  ports:
  - port: 8191
    targetPort: 8191
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: byparr
    app.kubernetes.io/instance: byparr
