kubernetes/byparr/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: byparr-tailscale
  annotations:
    tailscale.com/tags: tag:byparr

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: byparr
      port:
        number: 8191
  tls:
  - hosts:
    - byparr
